src/components/settings/tabs/themeLibary/styles.css
.vc-themes-lib-card {
    display: flex;
    flex-direction: column;
    width: 100%;
    overflow: visible;
    border-radius: 8px;
    position: relative;
    background: var(--bg-surface-raised);
    max-width: 320px;
    min-height: 320px;
    transition: box-shadow 0.2s ease-out, transform 0.2s ease-out, background 0.2s ease-out, opacity 0.2s ease-in;
    padding: 0;

    &:hover {
        transform: translateY(-2px);
        box-shadow: var(--elevation-high);
    }
}

.vc-themes-lib-header {
    position: relative;
    width: 100%;
    flex-shrink: 0;
    margin-bottom: 35px;
}

.vc-themes-lib-banner {
    width: 100%;
    height: 143px;
    object-fit: cover;
    pointer-events: none;
    display: block;
    margin: 0;
    border-radius: 8px 8px 0 0;
}

.vc-themes-lib-content {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    padding: 0 16px 16px;
    overflow: hidden;
}

.vc-themes-lib-icon-wrapper {
    position: absolute;
    bottom: -24px;
    left: 12px;
    width: 48px;
    height: 48px;
    border-radius: 20%;
    overflow: hidden;
    background: var(--bg-surface-raised);
}


.vc-themes-lib-icon {
    width: 100%;
    height: 100%;
    object-fit: cover;
    -webkit-user-drag: none;
    user-select: none;
    padding: 5px;
}

.vc-themes-lib-tag {
    color: var(--interactive-text-default);
    background: var(--background-mod-subtle);
    border: 1px solid var(--bg-surface-raised);
    padding: 2px 4px;
    border-radius: 8px;
    transition: border-color 200ms linear, color 200ms linear;
    cursor: pointer;
    font-size: 12px;
    min-height: unset;

    &:hover {
        color: var(--interactive-text-hover);
        border-color: var(--brand-500);
    }
}

.vc-themes-lib-tag.vc-themes-lib-tag-active {
    border-color: var(--brand-500);
    color: var(--interactive-text-active);
}

.vc-themes-lib-no-themes {
    width: 200%;
    height: 400px;
    background: url("https://discord.com/assets/b36de980b174d7b798c89f35c116e5c6.svg") center no-repeat;
}


.vc-themes-lib-modal-banner {
    position: relative;
    margin-bottom: 32px;
}

.vc-themes-lib-modal-banner-img {
    width: 100%;
    height: 197px;
    object-fit: cover;
    border-radius: 3px 3px 0 0;
    display: block;
}

.vc-themes-lib-modal-author {
    position: absolute;
    bottom: -21px;
    left: 12px;
}

.vc-themes-lib-modal-author-mask {
    width: 48px;
    height: 48px;
    padding: 4px;
    background-color: var(--background-base-low);
    border-radius: 20%;
    overflow: hidden;
}

.vc-themes-lib-modal-author-img {
    width: 100%;
    height: 100%;
    border-radius: 20%;
}

.vc-themes-lib-modal-header {
    margin: 0 20px;
    align-items: center;
    gap: 8px;
    display: flex;
}

.vc-themes-lib-modal-items {
    background: var(--background-base-lower);
    margin: 5px -10px;
    width: 100%;
    padding: 12px;
    border-radius: 8px;
}

.vc-themes-lib-modal-row {
    padding: 12px;
    color: var(--text-default);
    gap: 12px;
}

.vc-themes-lib-modal-items > .vc-themes-lib-modal-item:not(:last-child) {
    border-bottom: 1px solid var(--border-subtle);
}

.vc-themes-lib-modal-row-icon {
    max-width: 24px;
    min-width: 24px;
    display: flex;
}

.vc-themes-lib-modal-row-content {
    width: 100%;
}

.vc-themes-lib-modal-clickable {
    cursor: pointer;
    border-radius: 3px;
    background-color: transparent;
    transition: background-color ease 100ms;

    &:hover {
        color: var(--interactive-text-hover);
        background-color: var(--bg-overlay-hover, var(--interactive-background-hover));
    }
}

